--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,7 +48,7 @@
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>br.com.ac.rest_sgc</param-value>
+            <param-value>br.com.ac.srdv</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
